--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-<!-- Mirrored from geniusdevs.com/themeforest/buzzi/buzzi-onepage/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 20 Mar 2021 02:10:28 GMT -->
 <head>
+	<meta name="google-site-verification" content="r511ZG_clhdaAbOKjHtdnZzXyHx6ofmUMthGHEYbU70" />
 	<meta charset="utf-8">
 	  <meta charset="UTF-8">
     <meta name="robots" content="noodp" />
@@ -2169,7 +2167,4 @@ Certifications</h4>
     </div> 
     <!-- preloader area end -->
 </body>
-
-
-<!-- Mirrored from geniusdevs.com/themeforest/buzzi/buzzi-onepage/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 20 Mar 2021 02:10:48 GMT -->
 </html>
