--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	
 	<meta name="google-site-verification" content="r511ZG_clhdaAbOKjHtdnZzXyHx6ofmUMthGHEYbU70" />
 	<meta charset="utf-8">
 	  <meta charset="UTF-8">
@@ -30,6 +31,98 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- responsive -->
     <link rel="stylesheet" href="assets/css/responsive.css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KDXTW84QMK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KDXTW84QMK');
+</script>
+<!-- Json-ld for Local bussiness-->
+	<script type="application/ld+json">
+{
+  "@context" : "http://schema.org",
+  "@type" : "LocalBusiness",
+  "name" : "Potential Engineer",
+  "image" : "https://potentialengineer.github.io/website/assets/images/potential%20engineer.png",
+  "telephone" : "+91-72039-00714",
+  "email" : "ranjitsinhg@gmail.com",
+  "address" : {
+    "@type" : "PostalAddress",
+    "streetAddress" : "7,shiv shakti row house,Adajan",
+    "addressLocality" : "Surat",
+    "addressRegion" : "Gujarat",
+    "addressCountry" : "India",
+    "postalCode" : "395009"
+  },
+  "url" : "https://potentialengineer.github.io/website"
+}
+</script>
+	
+<script type="application/ld+json">
+[ {
+  "@context" : "http://schema.org",
+  "@type" : "Product",
+  "name" : "Potential Engineer",
+  "image" : "https://potentialengineer.github.io/website/assets/images/potential%20engineer.png"
+}, {
+  "@context" : "http://schema.org",
+  "@type" : "Product",
+  "name" : "Potential Engineer",
+  "image" : "https://potentialengineer.github.io/website/assets/images/certificates/1.png",
+  "description" : "EPCG LICENCE\nANNEXURE <BR/>5-A"
+}, {
+  "@context" : "http://schema.org",
+  "@type" : "Product",
+  "name" : "Potential Engineer",
+  "image" : "https://potentialengineer.github.io/website/assets/images/certificates/1.png",
+  "description" : "INSTALLATION CERTIFICATE FOR PLANT AND MACHINARY"
+}, {
+  "@context" : "http://schema.org",
+  "@type" : "Product",
+  "name" : "Potential Engineer",
+  "image" : "https://potentialengineer.github.io/website/assets/images/certificates/1.png",
+  "description" : "PLANT PERFORMANCE AND CAPACITY"
+}, {
+  "@context" : "http://schema.org",
+  "@type" : "Product",
+  "name" : "Potential Engineer",
+  "image" : "https://potentialengineer.github.io/website/assets/images/certificates/1.png",
+  "description" : "CERTIFICATE FOR CUSTOM CLEARANCE"
+}, {
+  "@context" : "http://schema.org",
+  "@type" : "Product",
+  "name" : "Potential Engineer",
+  "image" : "https://potentialengineer.github.io/website/assets/images/certificates/1.png",
+  "description" : "SUBSIDY FOR PLANT AND MACHINARY"
+}, {
+  "@context" : "http://schema.org",
+  "@type" : "Product",
+  "name" : "Potential Engineer",
+  "image" : "https://potentialengineer.github.io/website/assets/images/certificates/1.png",
+  "description" : "INSTALLATION OF MACHINARY FOR BANK LOANS"
+}, {
+  "@context" : "http://schema.org",
+  "@type" : "Product",
+  "name" : "Potential Engineer",
+  "image" : "https://potentialengineer.github.io/website/assets/images/certificates/1.png",
+  "description" : "DGFT CLEARANCE AND CERTIFICATIONS"
+}, {
+  "@context" : "http://schema.org",
+  "@type" : "Product",
+  "name" : "Potential Engineer",
+  "image" : "https://potentialengineer.github.io/website/assets/images/certificates/1.png",
+  "description" : "ADVANCED AUTHORIZATION CERTIFICATION"
+}, {
+  "@context" : "http://schema.org",
+  "@type" : "Product",
+  "name" : "Potential Engineer",
+  "image" : "https://potentialengineer.github.io/website/assets/images/certificates/1.png",
+  "description" : "PLANT CAPACITY ENHANCEMENT CERTIFICATE"
+} ]
+</script>
 </head>
 
 <body>
