--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	  <meta charset="UTF-8">
     <meta name="robots" content="noodp" />
     <meta name="googlebot" content="all, index, follow" />
+	<meta name="keywords" content="chartered engineer surat, chartered engineer in surat, machine certificate provider in surat, machine valuation service in surat, potential engineer in surat, dgft complaint certificate in surat, certificate for dgft in surat,certificate for customs in surat, epcg certificate for banks surat, custom clearance certificate in surat, bank loan certificate in surat, subsidy certificate in surat, experienced chartered engineer in surat,find epcg license provider in surat, find machine installation certificate provider in surat, find plant performance certificate provider in surat, find custom clearance certificate provider in surat, find subsidy certifcate provider for machine in surat, find installation certificate for bank loans in surat, find dgft clearance provider in surat, find dgft certifcate provider in surat, find plant capacity enhancement certifate provider in surat "/>
 	<meta name="description" content="Potential Engineer provides Chartered Engineer services in surat for EPCG, Valuation Certification, and Installation certificate. Visit our site to Know more"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -172,7 +173,7 @@
                     <div class="info">
                         <h2 class="info-title"><span>About Us</span></h2>
                         <p>
-                            We are potential team of engineers with excellent expereince of various plants and machinaries for their capacity, performance,and related certifications required for DGFT, Customs, and Banks for EPCG,Custom Clearance, bank loans and subsidy purposes.</p>
+                            We are potential team of engineers with excellent experience of various plants and machinaries for their capacity, performance,and related certifications required for DGFT, Customs, and Banks for EPCG,Custom Clearance, bank loans and subsidy purposes.</p>
                         <div class="link">
                             <a href="#service" class="mybtn1">Learn More<i class="fas fa-chevron-right"></i></a>
                         </div>
