--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <meta name="googlebot" content="all, index, follow" />
 	<meta name="keywords" content="chartered engineer surat, chartered engineer in surat, machine certificate provider in surat, machine valuation service in surat, potential engineer in surat, dgft complaint certificate in surat, certificate for dgft in surat,certificate for customs in surat, epcg certificate for banks surat, custom clearance certificate in surat, bank loan certificate in surat, subsidy certificate in surat, experienced chartered engineer in surat,find epcg license provider in surat, find machine installation certificate provider in surat, find plant performance certificate provider in surat, find custom clearance certificate provider in surat, find subsidy certifcate provider for machine in surat, find installation certificate for bank loans in surat, find dgft clearance provider in surat, find dgft certifcate provider in surat, find plant capacity enhancement certifate provider in surat "/>
 	<meta name="description" content="Potential Engineer provides Chartered Engineer services in surat for EPCG, Valuation Certification, and Installation certificate. Visit our site to Know more"/>
+	<!--Facebook Tags start-->
+	  <meta property="og:title" content="Chartered Engineer & Approved Valuer in Surat"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:description" content="Potential Engineer provides Chartered Engineer services in surat for EPCG, Valuation Certification, and Installation certificate. Visit our site to Know more"/>
+	<meta property="og:url" content="https://potentialengineer.github.io/website">
+	<!-- facebook tags end-->
+	<!-- Twitter tags start-->
+    <meta name="theme-color" content="#75d6ba"/>
+	<meta name="twitter:url" content="https://potentialengineer.github.io/website"/>
+	<meta name="twitter:image" content="https://potentialengineer.github.io/website/assets/images/potential%20engineer.png"/>
+	<meta name="twitter:description" content="Potential Engineer provides Chartered Engineer services in surat for EPCG, Valuation Certification, and Installation certificate. Visit our site to Know more"/>
+	<meta name="twitter:domain" content="https://potentialengineer.github.io/website">
+	<!--twitter tags end-->
+	
+	<meta name="msapplication-navbutton-color" content="#75d6ba" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="#75d6ba" />
+    
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
