--- a/index.html
+++ b/index.html
@@ -2160,7 +2160,7 @@ Certifications</h4>
             </div>-->
         </div>
         <div class="copy-bg text-center">
-            <p>Copyright © 2021. All rights reserved by<br>
+            <p style="text-align: center;">Copyright © 2021. All rights reserved by
                 <a href="#home">Potential Engineer</a>
             </p>
         </div>
