--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	
 	<meta name="google-site-verification" content="r511ZG_clhdaAbOKjHtdnZzXyHx6ofmUMthGHEYbU70" />
 	<meta charset="utf-8">
+	<link rel="canonical" href="https://potentialengineer.github.io/website/"/>
 	  <meta charset="UTF-8">
     <meta name="robots" content="noodp" />
     <meta name="googlebot" content="all, index, follow" />
