--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	
 	<meta name="google-site-verification" content="r511ZG_clhdaAbOKjHtdnZzXyHx6ofmUMthGHEYbU70" />
+	<meta name="robots" content="noindex" />
 	<meta charset="utf-8">
 	<link rel="canonical" href="https://potentialengineer.github.io/website/"/>
 	  <meta charset="UTF-8">
