--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<meta name="robots" content="noindex" />
 	<meta charset="utf-8">
 	<link rel="canonical" href="https://potentialengineer.github.io/website/"/>
-	  <meta charset="UTF-8">
-    <meta name="googlebot" content="all, index, follow" />
+	  <meta charset="UTF-8"/>
 	<meta name="title" content="Potential Engineer">
 <meta name="description" content="Potential Engineer provides Chartered Engineer services in surat for EPCG, Valuation Certification, and Installation certificate. Visit our site to know more ">
 <meta name="keywords" content="chartered engineer surat, chartered engineer in surat, machine certificate provider in surat, machine valuation service in surat, potential engineer in surat, dgft complaint certificate in surat, certificate for dgft in surat,certificate for customs in surat, epcg certificate for banks surat, custom clearance certificate in surat, bank loan certificate in surat, subsidy certificate in surat, experienced chartered engineer in surat,find epcg license provider in surat, find machine installation certificate provider in surat, find plant performance certificate provider in surat, find custom clearance certificate provider in surat, find subsidy certifcate provider for machine in surat, find installation certificate for bank loans in surat, find dgft clearance provider in surat, find dgft certifcate provider in surat, find plant capacity enhancement certifate provider in surat,chartered engineer certificate consultants, chartered engineer for customs, Valuers for chartered engineer, chartered engineer for old machinery, chartered engineer for DGFT, chartered engineer for EPCG "/>
