--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="google-site-verification" content="r511ZG_clhdaAbOKjHtdnZzXyHx6ofmUMthGHEYbU70" />
 	
 	<meta charset="utf-8">
-	<link rel="canonical" href="https://potentialengineer.github.io/website/"/>
+	<link rel="canonical" href="/"/>
 	  <meta charset="UTF-8"/>
 	<meta name="title" content="Potential Engineer">
 <meta name="description" content="Potential Engineer provides Chartered Engineer services in surat for EPCG, Valuation Certification, and Installation certificate. Visit our site to know more ">
