--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                <div class="col-lg-6 d-flex align-self-center">
                    <div class="left-content">
                     <div class="content">
-                        <h1 class="title" style="color: #75ddb1">
-                            Chartered</h1> <h1 class="title" style="color: #75cbcc">
-                            	Engineer Surat
+                         <h1 class="title" style="color: #75ddb1">
+				Chartered<span style="color: #75cbcc">Engineer Surat</span>
+                            	
                         </h1>
 
                         <p class="subtitle">
