--- a/home.html
+++ b/home.html
@@ -155,8 +155,8 @@
                    <div class="left-content">
                     <div class="content">
                         <h1 class="title" style="color: #75ddb1">
-                            Chartered</h1> <h1 class="title" style="color: #75cbcc">
-                            	Engineer Surat
+				Chartered <span style="color: #75cbcc"> Engineer Surat</span>
+                            	
                         </h1>
 
                         <p class="subtitle">
