--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 	
 	<meta name="google-site-verification" content="3hXFCdcD5jC4TlWCfhBqecSHt5w7V7smU-oBDt5HNP4" />
 	<meta charset="utf-8">
-	
+	<meta name="robots" content="noindex">
 	  <meta charset="UTF-8"/>
 	<meta name="title" content="Potential Engineer">
 <meta name="description" content="Potential Engineer provides Chartered Engineer services in surat for EPCG, Valuation Certification, and Installation certificate. Visit our site to know more ">
