--- a/home.html
+++ b/home.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	
+	  <style type="text/css">
+         html{
+            scroll-behavior: smooth;
+         }
+      </style>
 	<meta name="google-site-verification" content="3hXFCdcD5jC4TlWCfhBqecSHt5w7V7smU-oBDt5HNP4" />
 	<meta charset="utf-8">
 	<meta name="robots" content="noindex">
