--- a/home.html
+++ b/home.html
@@ -35,6 +35,7 @@
     <title>Chartered Engineer & Approved Valuer in Surat</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="assets/images/favicon.png">
     <!-- bootstrap -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- fontawesome -->
