--- a/ahmdabad.html
+++ b/ahmdabad.html
@@ -1996,7 +1996,7 @@ Certifications</h4>
                 </div>
                 <div class="col-xl-8">
                    
-                       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3719.667805797474!2d72.78105151493556!3d21.20535148590293!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04d263b073cbd%3A0x9a3cb882ddc973de!2sPotential%20Engineers-Chartered%20Engineer%20and%20Approved%20Valuer%20in%20ahmedabad%2CGujarat%2CIndia!5e0!3m2!1sen!2suk!4v1616210569008!5m2!1sen!2suk" width="600" height="450" style="border:2px;" loading="lazy"></iframe>
+                    <!--   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3719.667805797474!2d72.78105151493556!3d21.20535148590293!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04d263b073cbd%3A0x9a3cb882ddc973de!2sPotential%20Engineers-Chartered%20Engineer%20and%20Approved%20Valuer%20in%20ahmedabad%2CGujarat%2CIndia!5e0!3m2!1sen!2suk!4v1616210569008!5m2!1sen!2suk" width="600" height="450" style="border:2px;" loading="lazy"></iframe>-->
                     
                 </div>
             </div>
