--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
 	<meta name="google-site-verification" content="3hXFCdcD5jC4TlWCfhBqecSHt5w7V7smU-oBDt5HNP4" />
+	<meta name="msvalidate.01" content="04FDA9FA1D0C803E10E982959AD541E2" />
 	<meta charset="utf-8">
 	
 	  <meta charset="UTF-8"/>
