--- a/home.html
+++ b/home.html
@@ -158,6 +158,9 @@
 				Chartered<span style="color: #75cbcc"> Engineer Surat</span>
                             	
                         </h1>
+			    <h1 style="display: none"> EPCG license Provider in Surat</h1>
+			    <h1 style="display: none"> Chartered engineer certificate in surat</h1>
+			    
 
                         <p class="subtitle">
                           We Provide Chartered Engineering, Certification Services and<br> Valuation Services In India
