--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
 				Chartered<span style="color: #75cbcc"> Engineer Surat</span>
                             	
                         </h1>
-
+			<h1 style="display: none"> EPCG license Provider in Surat</h1>
+			    
                         <p class="subtitle">
                           We Provide Chartered Engineering, Certification Services and<br> Valuation Services In India
                         </p>
