--- a/index.html
+++ b/index.html
@@ -2009,7 +2009,7 @@ Certifications</h4>
 
 
     <!-- Footer Section Start -->
-    <footer class="footer" id="footer">
+     <footer class="footer" id="footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-lg-4">
@@ -2025,7 +2025,7 @@ Certifications</h4>
                             </p>
                         </div>
                     </div>
-                <!--    <div class="fotter-social-links">
+                <!--  <div class="fotter-social-links">
                         <ul>
                             <li>
                                 <a href="#" class="facebook">
@@ -2053,19 +2053,20 @@ Certifications</h4>
                                 </a>
                             </li>
                         </ul>
-                    </div>
-                </div>-->
+                    </div> -->
+                </div>
                 <div class="col-md-6 col-lg-2">
                     <div class="footer-widget use-full-link-widget">
                         <h4 class="title">
-                            Other Branches
+                            Other branches
                         </h4>
                         <ul class="link-list">
                             <li>
                                 <a href="https://potentialengineer.github.io/mumbai/home.html" title="Mumbai Site" target="_blank">
                                         <i class="fas fa-angle-double-right"></i>Mumbai
+                                </a>
                             </li>
-                           <!-- <li>
+                            <!-- <li>
                                 <a href="#">
                                         <i class="fas fa-angle-double-right"></i>About Us
                                 </a>
@@ -2084,11 +2085,11 @@ Certifications</h4>
                                 <a href="#">
                                         <i class="fas fa-angle-double-right"></i>Carer
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-2">
+               <!--  <div class="col-md-6 col-lg-2">
                     <div class="footer-widget support-link-widget">
                         <h4 class="title">
                             Support
@@ -2122,7 +2123,7 @@ Certifications</h4>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                --> <!-- <div class="col-md-6 col-lg-4">
                         <div class="footer-widget instagram-feed-widget">
                                 <h4 class="title">
                                     Instagram Feed
@@ -2161,12 +2162,17 @@ Certifications</h4>
                                 </ul>
                             </div>
                 </div>
-            </div>-->
+            </div> -->
         </div>
         <div class="copy-bg text-center">
-            <p style="text-align: center;">Copyright © 2021. All Rights Reserved
+            <p style="text-align: center;">Copyright © 2021. All rights reserved by
                 <a href="#home">Potential Engineer</a>
+
             </p>
+
+        </div>
+        <div>
+            
         </div>
     </footer>
     <!-- Footer Section End -->
