--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -70,7 +71,7 @@
   "name" : "Potential Engineer",
   "image" : "https://potentialengineer.github.io/website/assets/images/potential%20engineer.png",
   "telephone" : "+91-72039-00714",
-  "email" : "ranjitsinhg@gmail.com",
+  "email" : "potentialengineerindia@gmail.com",
   "address" : {
     "@type" : "PostalAddress",
     "streetAddress" : "7,shiv shakti row house,Adajan",
@@ -130,7 +131,7 @@
                                     Contact
                                     </a>
                                     <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="mailto:ranjitsinhg@gmail.com">Mail me</a>
+                                    <a class="dropdown-item" href="mailto:potentialengineerindia@gmail.com">Mail me</a>
                                     <a class="dropdown-item" href="tel:+917203900714">Call me</a>
                                     <a class="dropdown-item" rel="nofollow" href="https://bit.ly/37tKTZ5" target="_blank">Whatsapp me</a>
                                     </div>
@@ -524,7 +525,7 @@ ANNEXURE <br>5-A
                             <div class="social">
                                 <ul>
                                     <li>
-                                        <a href="mailto:ranjitsinhg@gmail.com" title="Mail me">
+                                        <a href="mailto:potentialengineerindia@gmail.com" title="Mail me">
                                             <i class="fas fa-envelope"></i>
                                         </a>
                                     </li>
@@ -551,7 +552,7 @@ ANNEXURE <br>5-A
                              <div class="social">
                                 <ul>
                                     <li>
-                                        <a href="mailto:ranjitsinhg@gmail.com" title="Mail me">
+                                        <a href="mailto:potentialengineerindia@gmail.com" title="Mail me">
                                             <i class="fas fa-envelope"></i>
                                         </a>
                                     </li>
@@ -579,7 +580,7 @@ Certification">
                             <div class="social">
                                 <ul>
                                     <li>
-                                        <a href="mailto:ranjitsinhg@gmail.com" title="Mail me">
+                                        <a href="mailto:potentialengineerindia@gmail.com" title="Mail me">
                                             <i class="fas fa-envelope"></i>
                                         </a>
                                     </li>
@@ -608,7 +609,7 @@ Certifications">
                             <div class="social">
                                 <ul>
                                     <li>
-                                        <a href="mailto:ranjitsinhg@gmail.com" title="Mail me">
+                                        <a href="mailto:potentialengineerindia@gmail.com" title="Mail me">
                                             <i class="fas fa-envelope"></i>
                                         </a>
                                     </li>
@@ -636,7 +637,7 @@ Certifications</h4>
                              <div class="social">
                                 <ul>
                                     <li>
-                                        <a href="mailto:ranjitsinhg@gmail.com" title="Mail me">
+                                        <a href="mailto:potentialengineerindia@gmail.com" title="Mail me">
                                             <i class="fas fa-envelope"></i>
                                         </a>
                                     </li>
@@ -664,7 +665,7 @@ Certifications">
                             <div class="social">
                                 <ul>
                                     <li>
-                                        <a href="mailto:ranjitsinhg@gmail.com" title="Mail me">
+                                        <a href="mailto:potentialengineerindia@gmail.com" title="Mail me">
                                             <i class="fas fa-envelope"></i>
                                         </a>
                                     </li>
@@ -1963,7 +1964,7 @@ Certifications</h4>
                         </li>
                         <li>
 
-                            <a href="mailto:ranjitsinhg@gmail.com" title="Mail me" rel="nofollow">
+                            <a href="mailto:potentialengineerindia@gmail.com" title="Mail me" rel="nofollow">
                               <div class="info-box box2">
                                 <div class="left">
                                     <div class="icon">
@@ -1972,7 +1973,7 @@ Certifications</h4>
                                 </div>
                                 <div class="right">
                                     <div class="content">
-                                        <p>ranjitsinhg@gmail.com</p>
+                                        <p>potentialengineerindia@gmail.com</p>
                                     </div>
                                 </div>
                             </div></a>
