--- a/index.html
+++ b/index.html
@@ -1973,7 +1973,7 @@ Certifications</h4>
                                 </div>
                                 <div class="right">
                                     <div class="content">
-                                        <p>potentialengineerindia@gmail.com</p>
+                                        <p>Mail me</p>
                                     </div>
                                 </div>
                             </div></a>
