--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                     <a class="dropdown-item" href="mailto:potentialengineerindia@gmail.com">Mail me</a>
                                     <a class="dropdown-item" href="tel:+917203900714">Call me</a>
                                     <a class="dropdown-item" rel="nofollow" href="https://bit.ly/37tKTZ5" target="_blank">Whatsapp me</a>
-                                    <a class="dropdown-item" href="https://drive.google.com/file/d/1rCMAswr9L2Lb_GWZ4rKbOKXY_B5_nPHL/view?usp=sharing">Add me to contacts</a>
+                                    <a class="dropdown-item" href="https://drive.google.com/uc?export=download&id=1rCMAswr9L2Lb_GWZ4rKbOKXY_B5_nPHL">Add me to contacts</a>
                                     </div>
                                 </li>
                             </ul>
