Smooth scrolling update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <style>
+        html{
+            scroll-behavior: smooth
+        }
+    </style>
   <meta name="google-site-verification" content="3hXFCdcD5jC4TlWCfhBqecSHt5w7V7smU-oBDt5HNP4" />
   <meta name="msvalidate.01" content="04FDA9FA1D0C803E10E982959AD541E2" />
   <meta charset="utf-8">
