Update Elfsight widget integration for WhatsApp chat in home and index pages

--- a/index.html
+++ b/index.html
@@ -2008,11 +2008,9 @@ Certifications</h4>
                 </div>
             </div>
             <section id="reviews">
-            <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-                <div class="elfsight-app-acbced60-95b1-4a1c-b4b5-470620ab9ef5"></div>
-                </section>
-                <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-<div class="elfsight-app-c4073982-29dc-4e9e-a951-33785fd762b5"></div>
+           <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-5b297eaa-2406-48f9-afce-aa0f984fb4e1" data-elfsight-app-lazy></div>
 
         </div>
     </section>
